--- a/static/index.html
+++ b/static/index.html
@@ -14,7 +14,7 @@
     </div>
     <div class="logo_bg"></div>
     <a href="/" class="logo"><img src="images/logo.png" alt="" /></a>
-    <div class="logo_header">Мини-отель «Вилла Бавария»</div>
+    <div class="logo_header">Мини-отель «Вилла Бавария» 2.0</div>
     <div class="head_phone">+7 (918) 618-80-24, +7 (928) 142-71-70</div>
     <ul class="menu_head">
     	<li><a href="#"><span>О гостинице</span></a></li>
